--- a/public/422.html
+++ b/public/422.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The change you wanted was rejected (422)</title>
+  <title>silverprint</title>
   <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
+    body { background-color: #222; color: #ddd; text-align: center; font-family: helvetica, arial, sans-serif; }
     div.dialog {
       width: 25em;
       padding: 0 4em;
       margin: 4em auto 0 auto;
       border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
+      border-right-color: #ddd;
+      border-bottom-color: #ddd;
     }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
   </style>
 </head>
-
 <body>
-  <!-- This file lives in public/422.html -->
   <div class="dialog">
-    <h1>The change you wanted was rejected.</h1>
-    <p>Maybe you tried to change something you didn't have access to.</p>
+    <h2>The change you wanted was invalid. Sorry!</h2>
   </div>
+
 </body>
 </html>
